--- a/src/views/admin/index.html
+++ b/src/views/admin/index.html
@@ -1,3 +1,6 @@
 <ul>
     <li><a href='/admin/grant'>Grant</a></li>
+    <li><a href='/admin/blockuser'>Block user (Login User)</a></li>
+    <li><a href='/admin/blockip'>Block IP address</a></li>
+    <li><a href='/admin/loginhistory'>Login History</a></li>
 </ul>
