--- a/src/views/user/signup.html
+++ b/src/views/user/signup.html
@@ -32,7 +32,7 @@
             </p>
             <small id='passwordConfirmDesc' class='form-text text-muted'>In order to ensure that you have entered your password correctly, please type it one more time.</small>
         </div>
-        <p><span class='text-danger fw-bold'>WARNING!</span>    YOU CANNOT find or reset your password once you forget it. Make sure you make your password memorable.</p>
+        <p><span class='text-danger fw-bold'>WARNING!</span>    YOU CANNOT reset your password once you forget it. Make sure you make your password memorable.</p>
         <button type='submit' class='btn btn-primary'>Sign up</button>
     </form>
     <script src='/js/signupPasswordCheck.js'></script>
