--- a/src/views/admin/loginhistoryName.ejs
+++ b/src/views/admin/loginhistoryName.ejs
@@ -1,10 +1,11 @@
-<form action='/admin/grant' method='GET'>
+<form action='/admin/loginhistory' method='GET'>
     <div class='mb-3 row'>
         <label for='tbUsername' class='col-sm-2 col-form-label'>Username</label>
         <div class='col-sm-10'>
-          <input type='text' maxlength='255' class='form-control' id='tbUsername' name='grantTo'>
+          <input type='text' maxlength='255' class='form-control' id='tbUsername' name='user'>
         </div>
     </div>
+    <p><span class='text-warning fw-bold'>NOTE</span>    This will be logged visible to everyone.</p>
     <div class='mt-3'>
         <button type='submit' class='btn btn-primary'>Submit</button>
     </div>
