--- a/src/views/nav.ejs
+++ b/src/views/nav.ejs
@@ -35,21 +35,21 @@
                         <!-- filelist -->
                         <a class="dropdown-item" href="/FileList">
                             <i class="fa fa-picture-o nav-icon" aria-hidden="true"></i>
-                            <span class='d-none d-lg-inline'>FileList</span>
+                            <span>FileList</span>
                         </a>
                     </li>
                     <li>
                         <!-- upload -->
                         <a class="dropdown-item" href="/Upload">
                             <i class="fa fa-upload nav-icon" aria-hidden="true"></i>
-                            <span class='d-none d-lg-inline'>Upload</span>
+                            <span>Upload</span>
                         </a>
                     </li>
                     <li>
                         <!-- Admin log -->
                         <a class="dropdown-item" href="/adminlog">
-                            <i class="fa fa-history" aria-hidden="true"></i>
-                            <span class='d-none d-lg-inline'>Admin log</span>
+                            <i class="fa fa-history nav-icon" aria-hidden="true"></i>
+                            <span>Admin log</span>
                         </a>
                     </li>
                 </ul>
