--- a/src/views/pageTools.ejs
+++ b/src/views/pageTools.ejs
@@ -1,12 +1,21 @@
 <!-- pageTools.ejs: edit, delete, move...-->
 <div class="w-auto btn-group mt-3" id='pageTools' role="group" aria-label="Basic outlined example">
-  <a href="/w/<%= pagename %>" class="btn btn-outline-primary">View</a>
+  <% if (/^Discuss:.+$/.test(pagename)) { %>
+  <a href='/w/<%= pagename.match(/^Discuss:(.+)$/)[1] %>' class='btn btn-outline-primary'>Page</a>
+  <% } else { %>
+  <a href="/w/<%= pagename %>" class="btn btn-outline-primary">Page</a>
+  <% } %>
   <a href='/edit/<%= pagename %>' class="btn btn-outline-primary">Edit</a>
+  <% if (/^Discuss:.+$/.test(pagename)) { %>
+  <a href='/w/<%= pagename %>' class='btn btn-outline-primary'>Discuss</a>
+  <% } else { %>
+  <a href='/w/Discuss:<%= pagename %>' class='btn btn-outline-primary'>Discuss</a>
+  <% }%>
   <a href='/history/<%= pagename %>' class='btn btn-outline-primary'>History</a>
-  <a class='btn btn-outline-primary dropdown-toggle rounded-end' type='button' id="pageToolsDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+  <a class='btn btn-outline-primary dropdown-toggle rounded-end' style='-webkit-appearance: none' type='button' id="pageToolsDropdown" data-bs-toggle="dropdown" aria-expanded="false">
     More
   </a>
-  <ul class='dropdown-menu dropdown-menu-end ' aria-labelledby="pageToolsDropdown">
+  <ul class='dropdown-menu dropdown-menu-end' aria-labelledby="pageToolsDropdown">
     <li><a href='/move/<%= pagename %>' class='dropdown-item'>Move</a></li>
     <li><a href='/delete/<%= pagename %>' class='dropdown-item'>Delete</a></li>
     <li><a href='/protect/<%= pagename %>' class='dropdown-item'>Protection</a></li>
