--- a/src/views/pages/edit.ejs
+++ b/src/views/pages/edit.ejs
@@ -1,11 +1,12 @@
 <link rel='stylesheet' href='/css/edit.css'>
 <form action='/edit/<%= title %>' method='POST' class='editForm'>
     <div class='form-group'>
-        <textarea class='form-control' id='editAreaBox' name='content'><%= content %></textarea>
+        <textarea class='form-control' id='editAreaBox' name='content'<% if (locals.disabled) { %> disabled <% } %>><%= content %></textarea>
     </div>
+    <% if (!locals.disabled) { %>
     <div class="form-group mt-2 mb-2 row">
-        <label for='comment' class='col-sm-1 col-form-label sr-only'>Comment</label>
-        <div class="col-sm-11">
+        <label for='comment' class='col-sm-2 col-form-label'>Comment</label>
+        <div class="col-sm-10">
             <input class="form-control" id='comment' maxlength=255 name='comment' type="text" placeholder="Max 255 characters">
         </div>
     </div>
@@ -16,4 +17,5 @@
     <% } %>
     <p><span class='text-danger fw-bold'>WARNING!</span>    DO NOT save copyrighted materials without permission. <%= global.copyrightNotice %></p>
     <button type='submit' type='button' class='btn btn-primary mt-3'>Save</button>
+    <% } %>
 </form>
