--- a/src/views/rc.ejs
+++ b/src/views/rc.ejs
@@ -1,7 +1,7 @@
 <aside>
     <div id='rcsidebar' class='row border rounded'>
         <div class='pb-2 mt-2 border-bottom'>
-            <b>RecentChanges</b>
+            <span class='fw-bold'>RecentChanges <a href='/RecentChanges'><i class="fa fa-external-link-square ren-extlink-icon" aria-hidden="true"></i></a></span>
         </div>
         <ul class="list-group list-group-flush" id='rcsidebarcontents'>
         </ul>
